--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
